<resources>
    <string name="app_name" translatable="false">Sortir A Metz</string>
    <string name="menu_map">Maps</string>
    <string name="menu_consult">Places</string>
    <string name="settings">settings</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="element_removed">removed from list !</string>
    <string name="undo">UNDO</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="icon">Icon</string>
    <string name="place_icon">Place icon</string>
    <string name="error_image_load">Impossible to load place icon</string>
    <string name="edit">Edit</string>
    <string name="needed_loaction">Application need loaction to work</string>
    <string name="radius">Radius</string>
    <string name="filter">Filter</string>
    <string name="coord">Coordonates</string>
    <string name="place_picked">Place picked !</string>
    <string name="add_title">Add a place</string>
    <string name="edit_title">Edit</string>
    <string name="all">All</string>
    <string name="username">Username</string>
    <string name="username_login">Username / email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="already_member">Already a member? Login</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">GPS &amp; localisation</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>
        <item>-1</item>
    </string-array>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System location settings</string>


    <string name="pref_header_unit">Units</string>

    <string name="pref_title_unit_distance">Distance</string>
    <string name="error_username">Enter a valid username or email</string>
    <string name="error_password">more 6 characters</string>
    <string name="error_email">enter a valid email</string>
    <string name="error_register">Signup failed</string>
    <string name="error_login">Login Failed</string>
    <string name="too_long_number">The given number is too long</string>
    <string name="disconnect">Disconnect</string>
    <string-array name="pref_unit_list_distance">
        <item>m</item>
        <item>ft</item>
    </string-array>

    <string-array name="pref_unit_list_values_distance">
        <item>m</item>
        <item>ft</item>
    </string-array>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SAM</string>
    <string name="nav_header_subtitle">contact@sam.io</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="touch_sensor">Touch sensor</string>
    <string name="fingerprint">FingerPrint</string>
    <string name="no_lock_screen">Lock screen security not enabled</string>
    <string name="no_fingerprint_permission">Fingerprint authentication permission not enabled</string>
    <string name="no_fingerprint_enrolled">Register at least one fingerprint in Settings</string>
    <string name="auth_error">Authentication error\n</string>
    <string name="auth_help">Authentication help\n</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="auth_succeeded">Authentication succeeded.</string>
    <string name="pref_header_security">Security</string>
    <string name="pref_title_use_fingerprint">Use fingerprint</string>
    <string name="friends">Friends</string>
    <string name="elements">Places</string>
    <string name="map">Map</string>
    <string name="gender">Gender</string>
    <string name="default_man_icon" translatable="false">"https://cdn4.iconfinder.com/data/icons/user-avatar-flat-icons/512/User_Avatar-31-512.png"</string>
    <string name="default_woman_icon" translatable="false">"https://www.shareicon.net/download/2016/09/01/822726_user_512x512.png"</string>
    <string name="search_somebody">Search somebody</string>
    <string name="add_as_friend">Add</string>
</resources>
