<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <!--<header
            android:fragment="a1819.m2ihm.sortirametz.SettingsActivity$GeneralPreferenceFragment"
            android:title="@string/pref_header_general"
            android:icon="@drawable/ic_info_black_24dp"/>
            -->
    <header
            android:fragment="a1819.m2ihm.sortirametz.SettingsActivity$SecurityPreferenceFragment"
            android:title="@string/pref_header_security"
            android:icon="@drawable/ic_lock_black_24dp"/>

    <header
            android:fragment="a1819.m2ihm.sortirametz.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/pref_header_data_sync"
            android:icon="@drawable/ic_place_black_24dp"/>
    <header
            android:fragment="a1819.m2ihm.sortirametz.SettingsActivity$UnitFragment"
            android:title="@string/pref_header_unit"
            android:icon="@drawable/ic_ruler"
            />

</preference-headers>
