<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fitsSystemWindows="true"
        >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_item_padding_login_top"
            android:paddingStart="@dimen/list_item_padding_login"
            android:paddingEnd="@dimen/list_item_padding_login"
            >

        <android.support.design.widget.TextInputLayout
                android:id="@+id/lbl_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_login"
                    android:ems="10"
                    android:id="@+id/edt_login_username"
                    android:inputType="textEmailAddress|textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/lbl_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_login_username"
                >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:ems="10"
                    android:id="@+id/edt_login_password"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login_login"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/list_item_padding_login"
                android:layout_marginBottom="@dimen/list_item_padding_login"
                android:layout_below="@id/lbl_login_password"/>

        <TextView android:id="@+id/link_login_register"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/register"
                  android:gravity="center"
                  android:layout_below="@id/btn_login_login"
                />


    </RelativeLayout>
</ScrollView>