<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="a1819.m2ihm.sortirametz.CategoryActivity">
    <android.support.design.widget.TextInputLayout
            android:id="@+id/lbl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:ems="10"
                android:id="@+id/edt_description"
                />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
            android:id="@+id/lyt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_description"
            android:layout_alignParentEnd="true"
            >

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:layout_toEndOf="@id/btn_save"
                android:background="@android:color/white"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"

                />
    </RelativeLayout>
</RelativeLayout>