<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="a1819.m2ihm.sortirametz.AddPlaceActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyt_add_name">

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_add_name"
                android:labelFor="@+id/edt_add_name"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_toEndOf="@id/lbl_add_name"
                android:text="@string/name"
                android:ems="10"
                android:id="@+id/edt_add_name"
                />
    </RelativeLayout>
   <RelativeLayout
            android:id="@+id/lyt_add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_below="@id/lyt_add_name">
        <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_add_address"
                android:labelFor="@+id/edt_add_address"
                />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_toEndOf="@id/lbl_add_address"
                android:text="@string/address"
                android:ems="10"
                android:id="@+id/edt_add_address"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_add_address">
        <TextView
                android:text="@string/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_add_category"
                android:labelFor="@+id/spi_add_category"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spi_add_category"
                android:layout_toEndOf="@id/lbl_add_category"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_add_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_add_category">
        <TextView
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_add_description"
                android:labelFor="@+id/edt_add_description"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@id/edt_add_description"
                android:id="@+id/edt_add_description" />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_add_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_add_description"
            >
        <TextView
                android:id="@+id/lbl_add_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon"
                android:labelFor="@+id/edt_add_icon"
                />
        <EditText
                android:id="@+id/edt_add_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:ems="10"
                android:layout_toEndOf="@id/lbl_add_icon"
                />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_add_icon"
            >

        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add_add"/>

        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add_cancel"
                android:layout_toEndOf="@id/btn_add_add"
                />
    </RelativeLayout>
</RelativeLayout>