<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/place_main_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    tools:context="a1819.m2ihm.sortirametz.PlaceActivity" >
    <android.support.design.widget.TextInputLayout
            android:id="@+id/lbl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/edt_name"
                />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/lbl_coord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_name"
            >
        <EditText
                android:id="@+id/edt_coord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coord"
                android:ems="10"
                />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/lbl_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_coord"
            >
        <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:ems="10"
                />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/lbl_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_address"
            >
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spi_category"
                android:layout_toEndOf="@id/lbl_category"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/lbl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_category"
            >
        <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:ems="10"
                />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/lbl_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_description"
            >
        <ImageView
                android:layout_width="@dimen/place_icon_size"
                android:layout_height="@dimen/place_icon_size"
                app:srcCompat="@drawable/ic_help_black_24dp"
                android:contentDescription="@string/place_icon"
                android:id="@+id/img_icon"
                android:layout_centerVertical="true"
                />
        <EditText
                android:id="@+id/edt_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/icon"
                android:inputType="textUri"
                android:ems="10"
                />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
            android:id="@+id/lyt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_icon"
            android:layout_alignParentEnd="true"
            >

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:layout_toEndOf="@id/btn_save"
                android:background="@android:color/white"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"

                />
    </RelativeLayout>

<!--
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyt_name"
            android:layout_below="@id/title_place"
            android:layout_marginTop="@dimen/margin_title"
            >
        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_name"
                android:labelFor="@+id/edt_name"
                android:layout_centerVertical="true"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_toEndOf="@id/lbl_name"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/edt_name"
                android:layout_centerVertical="true"
                />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_coord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_name"
            >
        <TextView
                android:id="@+id/lbl_coord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coord"
                android:labelFor="@+id/edt_coord"
                android:layout_centerVertical="true"
                />
        <EditText
                android:id="@+id/edt_coord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_toEndOf="@id/lbl_coord"
                android:ems="10"
                android:layout_centerVertical="true"
                />
    </RelativeLayout>
   <RelativeLayout
            android:id="@+id/lyt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_below="@id/lyt_coord">
        <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_address"
                android:labelFor="@+id/edt_address"
                android:layout_centerVertical="true"
                />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_toEndOf="@id/lbl_address"
                android:hint="@string/address"
                android:ems="10"
                android:id="@+id/edt_address"
                android:layout_centerVertical="true"
                />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_address">
        <TextView
                android:text="@string/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_category"
                android:labelFor="@+id/spi_category"
                android:layout_centerVertical="true"
                />
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spi_category"
                android:layout_toEndOf="@id/lbl_category"
                android:layout_centerVertical="true"
                />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_category">
        <TextView
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_description"
                android:labelFor="@+id/edt_description"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@id/edt_description"
                android:id="@+id/edt_description" />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_description"
            >

        <ImageView
                android:layout_width="@dimen/place_icon_size"
                android:layout_height="@dimen/place_icon_size"
                app:srcCompat="@drawable/ic_help_black_24dp"
                android:contentDescription="@string/place_icon"
                android:id="@+id/img_icon"
                android:layout_centerVertical="true"
                />

        <TextView
                android:id="@+id/lbl_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_icon"
                android:text="@string/icon"
                android:labelFor="@+id/edt_icon"
                android:layout_centerVertical="true"
                />
        <EditText
                android:id="@+id/edt_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:ems="10"
                android:layout_toEndOf="@id/lbl_icon"
                android:layout_centerVertical="true"
                />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/lyt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_icon"
            >

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"/>

        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:layout_toEndOf="@id/btn_save"
                />
    </RelativeLayout>-->
</RelativeLayout>